syntax = "proto3";

package proto;

option go_package = "./proto";

service Passport {
  rpc ParseJwt(RequestParseJwt) returns (ParseJwtResult) {}
  rpc GenToken(RequestGenToken) returns (GenTokenResult) {}
}

message RequestParseJwt {
  string token = 1;
}

message RequestGenToken {
  string xh = 1;
  int64 valid = 2;
}

message ParseJwtResult {
  Claims claims = 1;
  bool Valid = 2;
}

message GenTokenResult {
  string token = 1;
}

message Claims {
  string id = 1;
  string xh = 2;
}